ufw.rules
# For explanation and usage see: https://serverfault.com/questions/317595/copy-ufw-rules-between-servers

*filter
:ufw-user-input - [0:0]
:ufw-user-output - [0:0]
:ufw-user-forward - [0:0]
:ufw-before-logging-input - [0:0]
:ufw-before-logging-output - [0:0]
:ufw-before-logging-forward - [0:0]
:ufw-user-logging-input - [0:0]
:ufw-user-logging-output - [0:0]
:ufw-user-logging-forward - [0:0]
:ufw-after-logging-input - [0:0]
:ufw-after-logging-output - [0:0]
:ufw-after-logging-forward - [0:0]
:ufw-logging-deny - [0:0]
:ufw-logging-allow - [0:0]
:ufw-user-limit - [0:0]
:ufw-user-limit-accept - [0:0]
### RULES ###

### tuple ### allow tcp 22022 0.0.0.0/0 any 0.0.0.0/0 OpenSSH - in
-A ufw-user-input -p tcp --dport 22022 -j ACCEPT -m comment --comment 'dapp_OpenSSH'

### tuple ### allow any 3478 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 3478 -j ACCEPT
-A ufw-user-input -p udp --dport 3478 -j ACCEPT

### tuple ### allow udp 3478 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p udp --dport 3478 -j ACCEPT

### tuple ### allow any 5349 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 5349 -j ACCEPT
-A ufw-user-input -p udp --dport 5349 -j ACCEPT

### tuple ### allow udp 5349 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p udp --dport 5349 -j ACCEPT

### tuple ### allow udp 49160:49200 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p udp -m multiport --dports 49160:49200 -j ACCEPT

### tuple ### allow udp 49152:65535 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p udp -m multiport --dports 49152:65535 -j ACCEPT

### tuple ### allow any 8080 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 8080 -j ACCEPT
-A ufw-user-input -p udp --dport 8080 -j ACCEPT

### tuple ### deny any 3000 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 3000 -j DROP
-A ufw-user-input -p udp --dport 3000 -j DROP

### tuple ### allow any 80 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 80 -j ACCEPT
-A ufw-user-input -p udp --dport 80 -j ACCEPT

### tuple ### allow any 443 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 443 -j ACCEPT
-A ufw-user-input -p udp --dport 443 -j ACCEPT

### END RULES ###

### LOGGING ###
-A ufw-after-logging-input -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw-after-logging-forward -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-I ufw-logging-deny -m conntrack --ctstate INVALID -j RETURN -m limit --limit 3/min --limit-burst 10
-A ufw-logging-deny -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw-logging-allow -j LOG --log-prefix "[UFW ALLOW] " -m limit --limit 3/min --limit-burst 10
### END LOGGING ###

### RATE LIMITING ###
-A ufw-user-limit -m limit --limit 3/minute -j LOG --log-prefix "[UFW LIMIT BLOCK] "
-A ufw-user-limit -j REJECT
-A ufw-user-limit-accept -j ACCEPT
### END RATE LIMITING ###
COMMIT
